--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            color: #ffffff
+            color: #fff
             background-color: #d703fc;
         }
 
