Refactor index.html for improved styling and structure
Updated HTML structure and styles, including responsive image class.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -13,13 +13,14 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            color: #fff
+            color: #fff;
             background-color: #d703fc;
+            min-height: 100vh;
         }
 
         /* Navigation */
         nav {
-            background: #0756e8
+            background: #0756e8;
             color: #fff;
             padding: 1rem;
             display: flex;
@@ -39,6 +40,7 @@
             margin: 2rem auto;
             padding: 0 1rem;
             background: #fff;
+            color: #333;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
@@ -60,6 +62,17 @@
             padding: 2rem;
             font-size: 0.9rem;
             color: #666;
+        }
+
+        /* Responsive image */
+        .hero-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
@@ -93,7 +106,7 @@
         </section>
     </div>
 
-  <img src="4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="noooo mosnter kid fall" style="width: 1480px; border-radius: 15px; margin-bottom: 20px;">
+  <img src="4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="noooo mosnter kid fall" class="hero-image">
   
     
     <section style="padding: 2rem; text-align: center;">
