--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <img src="4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="noooo mosnter kid fall" class="hero-image">
 
-  <section style= text-align: center
+  <section style= "text-align: center;">
   <button onclick="window.location.href='https://youtube.com/@johndeltareanulununu'">
   YT Channel
   </button>
