--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div>
             <a href="#">Home</a>
             <a href="#about">About</a>
-            <a href="https://github.com/JohnDeltaruneCodea">GitHub</a>
+            <a href="https://github.com/JohndeltaruneCodea">GitHub</a>
         </div>
     </nav>
 
