--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
   <section style="padding: 2rem; text-align: center;">
     <h3>one of my fave songs</h3>
     <audio controls>
-        <source src="assets/toby fox - UNDERTALE Soundtrack - 71 Undertale.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <source src="assets/undertale.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
   </section>
 
     <footer>
