--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             margin: 0;
             color: #fff;
             /* Solid background color (image removed) */
-            background: #ffffff;
+            background: #000000;
             min-height: 100vh;
         }
 
         /* Navigation */
         nav {
-            background: #0756e8;
+            background: #363978;
             color: #fff;
             padding: 1rem;
             display: flex;
