--- a/otherrepopage/index.html
+++ b/otherrepopage/index.html
@@ -1,1 +1,221 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+  <link rel="icon" type="image/png" href="favicon.png">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Other Repositorys</title>
+    <style>
+        /* Basic Reset & Branding */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            color: #fff;
+            /* Solid background color (image removed) */
+            background: #1f1f1f;
+            min-height: 100vh;
+        }
+
+        /* Navigation */
+        nav {
+            background: #363978;
+            color: #fff;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin-left: 15px;
+        }
+
+        /* Main Content Container */
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 0; /* keep inner padding in .content and section blocks */
+            background: #fff;
+            color: #333;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            overflow: hidden; /* ensures rounded corners clip inner elements */
+        }
+
+        /* inner content keeps the padding for text */
+        .content {
+            padding: 2rem 1rem;
+        }
+
+        /* Helper section padding so moved elements inside container get consistent spacing */
+        .section {
+            padding: 1.5rem 1rem;
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            padding: 0 1rem; /* we already have padding in .content, but keep small horizontal spacing */
+        }
+
+        .hero h1 {
+            margin-bottom: 0.5rem;
+            color: #9966cc;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            font-size: 0.9rem;
+            color: #666;
+            background: transparent;
+        }
+
+        /* Responsive image: sits inside the white container */
+        .hero-image {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: 0; /* remove any gap */
+            object-fit: cover;
+            border-radius: 0; /* allow the container's bottom radius to show on iframe below */
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        button {
+            background: #0756e8;
+            color: #fff;
+            border: none;
+            padding: 0.6rem 1rem;
+            border-radius: 6px;
+            cursor: pointer;
+            margin: 0.25rem;
+        }
+
+        /* Make the embedded iframe responsive and centered inside container */
+        .embed-wrap {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 1.5rem; /* spacing at bottom of container */
+        }
+
+        .embed-wrap iframe {
+            max-width: 100%;
+            width: 300px;
+            height: 80px;
+            border: 0;
+        }
+
+        /* Audio and links centered and spaced nicely */
+        .links-row {
+            display: flex;
+            justify-content: center;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+        }
+
+        .audio-center {
+            display: flex;
+            justify-content: center;
+        }
+
+        /* Small screens: make container margin a little smaller */
+        @media (max-width: 420px) {
+            .content {
+                padding: 1rem;
+            }
+            .section {
+                padding: 1rem;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <nav>
+        <strong>Johns Site</strong>
+        <div>
+            <a href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="https://github.com/JohndeltaruneCodea">GitHub</a>
+        </div>
+    </nav>
+
+    <div class="container">
+        <!-- content keeps padding for text -->
+        <div class="content">
+            <section class="hero">
+                <h1>hello!!!</h1>
+                <p>welcome to johndeltarunes website!</p>
+            </section>
+
+            <hr>
+
+            <section id="about" class="section" style="padding-top: 0;">
+                <h2>about me</h2>
+                <p>hi! i am johndeltarune25yt. i am a deltarune fan that posts stuff abt video games on yt.</p>
+                <ul>
+                    <li><strong>what i do:</strong> i make scratch projects in my free time. i also try to learn coding!</li>
+                    <li><strong>what do i like?</strong> i like video gaming and technology. i specifically like deltarune, undertale, and more. im a rlly big old technology fan</li>
+                    <li><strong>other misc stuff about me:</strong> i have a MASSIVE video game music addiction. like i love video games music so much (thx toby fox)</li>
+                </ul>
+            </section>
+        </div>
+
+        <!-- Image stays inside the container -->
+        <img src="assets/4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="noooo monster kid fall" class="hero-image">
+
+        <!-- Embed / Counters moved into the white container so the white card extends down to the embed ONLY -->
+        <section class="embed-wrap">
+            <iframe
+              src="https://livecounts.io/embed/youtube-live-subscriber-counter/UCAelppccaMC6E7mbiwfq_fw"
+              scrolling="no"
+              allowtransparency="true"
+              ></iframe>
+        </section>
+    </div>
+
+  <!-- Other links / button (moved OUTSIDE the container so the white card stops at the embed) -->
+  <section class="center" style="margin-top: 1rem;">
+    <p>my other stuff!</p>
+    <div class="links-row" style="margin-bottom: 1rem;">
+      <button onclick="window.location.href='https://youtube.com/@johndeltareanulununu'">
+        YT Channel
+      </button>
+
+      <button onclick="window.location.href='https://www.instagram.com/johndeltarune25/'">
+        Instagram
+      </button>
+
+      <button onclick="window.location.href='https://github.com/JohndeltaruneCodes'">
+        GitHub
+      </button>
+    </div>
+  </section>
+
+  <!-- Audio kept OUTSIDE the container as requested -->
+  <section style="padding: 2rem; text-align: center;">
+    <h3>one of my fave songs</h3>
+    <div class="audio-center">
+      <audio controls>
+        <source src="/assets/undertale.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </section>
+
+    <footer>
+        <p>&copy; 2026 JohnDeltarune25YT | Built with HTML & CSS</p>
+    </footer>
+
+</body>
+</html>
