Add button for navigating to other repository page

--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
       <button onclick="window.location.href='https://github.com/JohndeltaruneCodes'">
         GitHub
       </button>
+
+      
+      <button onclick="window.location.href='https://johndeltarunecodes.github.io/otherrepopage/index.html'">
+        Other Repositorys
+      </button>
     </div>
   </section>
 
