--- a/otherrepopage/index.html
+++ b/otherrepopage/index.html
@@ -83,9 +83,9 @@
   <nav>
     <strong>Johns Site</strong>
     <div>
-      <a href="#">Home</a>
+      <a href="JohndeltaruneCodes.github.io">Home</a>
       <a href="#about">About</a>
-      <a href="https://github.com/JohndeltaruneCodea">GitHub</a>
+      <a href="https://github.com/JohndeltaruneCodes">GitHub</a>
     </div>
   </nav>
 
