--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <h3>one of my fave songs</h3>
     <div class="audio-center">
       <audio controls>
-        <source src="/assets/undertale.mp3" type="audio/mpeg">
+        <audio src="/assets/undertale.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
