--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <h3>one of my fave songs</h3>
     <div class="audio-center">
       <audio controls>
-        <audio src="undertale.mp3" type="audio/mpeg">
+        <audio src="assets/ndertale.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
