--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <h3>Listen to some music! :)</h3>
     <div class="audio-center">
       <audio controls>
-        <audio src="assets/undertale.mp3" type="audio/mpeg">
+        <src="assets/undertale.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
