--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
 
         <!-- Image stays inside the container -->
-        <img src="assets/4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="noooo monster kid fall" class="hero-image">
+        <img src="assets/4-monsterKidRun-u5aplAAT0Wq7sEiE.gif" alt="papyru" class="hero-image" width="500" height="300">
 
         <!-- Embed / Counters moved into the white container so the white card extends down to the embed ONLY -->
         <section class="embed-wrap">
