--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <section class="center" style="margin-top: 1rem;">
     <p>my other stuff!</p>
     <div class="links-row" style="margin-bottom: 1rem;">
-      <button onclick="window.location.href='https://www.youtube.com/@FriskVRWasTaken'">
+      <button onclick="window.location.href='https://www.youtube.com/@Frisk-VR'">
         YT Channel
       </button>
 
