Rename website from JohnDeltarune to FriskVR

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JohnDeltarunes Website</title>
+    <title>FriskVR</title>
     <style>
         /* Basic Reset & Branding */
         body {
@@ -151,11 +151,11 @@
 <body>
 
     <nav>
-        <strong>Johns Site</strong>
+        <strong>FriskVR</strong>
         <div>
-            <a href="https://johndeltarunecodes.github.io">Home</a>
+            <a href="https://FriskVR.github.io">Home</a>
             <a href="#about">About</a>
-            <a href="https://github.com/JohndeltaruneCodes">GitHub</a>
+            <a href="https://github.com/FriskVR">GitHub</a>
         </div>
     </nav>
 
@@ -163,17 +163,17 @@
         <!-- content keeps padding for text -->
         <div class="content">
             <section class="hero">
-                <h1>hello!!!</h1>
-                <p>welcome to johndeltarunes website!</p>
+                <h1>Wecome to FriskVR.github.io!</h1>
+                <p>This is the official website of FriskVR!!!</p>
             </section>
 
             <hr>
 
             <section id="about" class="section" style="padding-top: 0;">
                 <h2>about me</h2>
-                <p>hi! i am johndeltarune25yt. i am a deltarune fan that posts stuff abt video games on yt.</p>
+                <p>hi! i am FriskVR. i am a deltarune fan and gtag youtuber that has 170ish subs.</p>
                 <ul>
-                    <li><strong>what i do:</strong> i make scratch projects in my free time. i also try to learn coding!</li>
+                    <li><strong>what i do:</strong> i make video. i also try to learn coding!</li>
                     <li><strong>what do i like?</strong> i like video gaming and technology. i specifically like deltarune, undertale, and more. im a rlly big old technology fan</li>
                     <li><strong>other misc stuff about me:</strong> i have a MASSIVE video game music addiction. like i love video games music so much (thx toby fox)</li>
                 </ul>
@@ -220,14 +220,14 @@
     <h3>Listen to some music! :)</h3>
     <div class="audio-center">
       <audio controls>
-        <src="assets/undertale.mp3" type="audio/mpeg">
+        <src="/assets/undertale.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
   </section>
 
     <footer>
-        <p>&copy; 2026 JohnDeltarune25YT | Built with HTML & CSS</p>
+        <p>&copy; 2026 FriskVR | Built with HTML & CSS</p>
     </footer>
 
 </body>
