Add favicon image to navigation bar

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 <body>
 
     <nav>
+        <img src="assets/favicon.png" alt="logo">
         <strong>FriskVR</strong>
         <div>
             <a href="https://FriskVR.github.io">Home</a>
