Add width and height attributes to favicon image

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <body>
 
     <nav>
-        <img src="assets/favicon.png" alt="logo">
+        <img src="assets/favicon.png" alt="logo" width="100" height="100">
         <strong>FriskVR</strong>
         <div>
             <a href="https://FriskVR.github.io">Home</a>
