Fix formatting of nav section in index.html

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 <body>
 
     <nav>
-        <img src="assets/favicon.png" alt="logo" width="30" height="30">
-        <strong>FriskVR</strong>
+        <img src="assets/favicon.png" alt="logo" width="30" height="30">  <strong>FriskVR</strong>
         <div>
             <a href="https://FriskVR.github.io">Home</a>
             <a href="#about">About</a>
