Refactor inline styles to CSS syntax

--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 <body>
 
     <nav>
-      <div style="text-align: center;">
+  {
+  text-align: center;
+}
         <img src="assets/favicon.png" alt="logo" width="30" height="30">  
       <strong>FriskVR</strong>
         <div>
