--- a/index.html
+++ b/index.html
@@ -25,8 +25,37 @@
             color: #fff;
             padding: 1rem;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
+            gap: 1rem;
+        }
+
+        .nav-brand {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .nav-brand a {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #fff;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .nav-brand a:hover {
+            opacity: 0.8;
+        }
+
+        .nav-brand img {
+            width: 30px;
+            height: 30px;
+        }
+
+        .nav-brand strong {
+            font-size: 1.2rem;
         }
 
         nav a {
@@ -145,17 +174,21 @@
             .section {
                 padding: 1rem;
             }
+            nav {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 <body>
 
     <nav>
-  {
-  text-align: center;
-}
-        <img src="assets/favicon.png" alt="logo" width="30" height="30">  
-      <strong>FriskVR</strong>
+        <div class="nav-brand">
+            <a href="https://FriskVR.github.io">
+                <img src="assets/favicon.png" alt="logo">
+                <strong>FriskVR</strong>
+            </a>
+        </div>
         <div>
             <a href="https://FriskVR.github.io">Home</a>
             <a href="#about">About</a>
@@ -215,7 +248,7 @@
 
        <button onclick="window.location.href='https://johndeltarunecodes.github.io/geodesdkchecker/'">
           Geode SDK Status
-      </button>
+       </button>
     </div>
   </section>
 
