Update changelog link to point to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </a>
         </div>
         <div>
-            <a href="#changelog">Website Changelog</a>
+            <a href="friskvr.github.io/changelog">Website Changelog</a>
             <a href="#about">About</a>
             <a href="https://github.com/FriskVR">GitHub</a>
         </div>
