Fix DOCTYPE declaration and update changelog link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -190,7 +190,7 @@
             </a>
         </div>
         <div>
-            <a href="friskvr.github.io/changelog">Website Changelog</a>
+            <a href="changelog">Website Changelog</a>
             <a href="#about">About</a>
             <a href="https://github.com/FriskVR">GitHub</a>
         </div>
