--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
     </div>
   </section>
 
+ <section class="embed-wrap">
+            <<iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+        </section>
+</div>
+
     <footer>
         <p>&copy; 2026 FriskVR | Built with HTML & CSS</p>
     </footer>
