--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -263,10 +263,10 @@
     </div>
   </section>
 
- <section class="embed-wrap">
-    <iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
- </section>
-
+  <section class="embed-wrap">
+    <iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true"></if[...]
+  </section>
+ 
     <footer>
         <p>&copy; 2026 FriskVR | Built with HTML & CSS</p>
     </footer>
