--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
     </div>
   </section>
 
-  <section class="embed-wrap">
-    <iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true"></if[...]
+  <section class="embed-wrap" style="padding-bottom: 2rem;">
+    <iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="800" height="600" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </section>
  
     <footer>
