Refactor audio element in index.html
Updated audio element to use <source> tag for better compatibility.

--- a/index.html
+++ b/index.html
@@ -256,15 +256,11 @@
   <section style="padding: 2rem; text-align: center;">
     <h3>Listen to some music! :)</h3>
     <div class="audio-center">
-      <audio controls>
-        <src="/assets/undertale.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
+     <audio controls>
+    <source src="undertale.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
     </div>
-  </section>
-
-  <section class="embed-wrap" style="padding-bottom: 2rem;">
-    <iframe src="https://www.retrogames.cc/embed/42085-sonic-the-hedgehog-2-simon-wai-prototype.html" width="1000" height="900" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </section>
  
     <footer>
