--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <h3>Listen to some music! :)</h3>
     <div class="audio-center">
      <audio controls>
-    <source src="undertale.mp3" type="audio/mpeg">
+    <source src="assets/undertale.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
     </div>
