--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <style>
         /* Basic Reset & Branding */
         body {
-    background-image: url("maybebg.png"); /* Specify the image file path */
-    background-repeat: no-repeat;               /* Prevent the image from repeating */
-    background-size: cover;                    /* Scale the image to cover the entire container */
-    background-attachment: fixed;              /* Fix the image position during scrolling */
-    background-color: #fcec05;                 /* Fallback color if the image doesn't load */
+    background-color: #1f1f1f;                 /* Fallback color if the image doesn't load */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
