--- a/404.html
+++ b/404.html
@@ -120,7 +120,7 @@
   <main>
     <h1 class="center-title">404</h1>
     <p class="center-desc">page not found</p>
-    <a class="back-btn" href="https://johndeltarunecodes.github.io/">Go back home</a>
+    <a class="back-btn" href="https://friskvr.github.io/">Go back home</a>
   </main>
 </body>
 </html>
