--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* Navigation */
         nav {
-            background: #363978;
+            background: #cc9706;
             color: #fff;
             padding: 1rem;
             display: flex;
@@ -121,7 +121,7 @@
 
         /* Buttons match nav color */
         button {
-            background: #363978;
+            background: #cc9706;
             color: #fff;
             border: none;
             padding: 0.6rem 1rem;
