--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         /* Basic Reset & Branding */
         body {
-    background-color: #1f1f1f;                 /* Fallback color if the image doesn't load */
+    background-color: #3d3d3d;                 /* Fallback color if the image doesn't load */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
